--- a/src/index.css
+++ b/src/index.css
@@ -18,30 +18,31 @@ code {
 
 }
 body {
-
   background-color: #161616
-
 }
 
 .block {
-
   background-color: rgba(255, 255, 255, 0.5);
-
   padding: 20px;
-
+  
 }
+
 img{
   width: 500px;
 }
+
 .cartIcon{
   width: 70px;
 }
+
 .categoryButtonSelected{
   background-color: green;
-  cursor: pointer;
-  margin: 5px;
-  padding: 5px;
 }
 .categoryButton:hover{
   background-color: #fdeb6b;
+}
+.categoryButton{
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
 }
