--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -45,4 +38,24 @@ img{
   cursor: pointer;
   margin: 5px;
   padding: 5px;
+}
+.icon{
+  width: 20px;
+}
+p, h1, h2, button {
+
+  font-family: 'Poppins', sans-serif;
+
+  font-size: 20px;
+
+}
+
+button {
+
+  background-color: #fdeb6b;
+
+  margin-top: 40px;
+
+  margin-left: 10px;
+
 }
